1463098/cgroup-memory-limit-respected-systemd.sh: removed cases with old UseCGroupMemoryLimitForHeap option