@@ -76,13 +76,9 @@ EOF
 sudo -n systemctl daemon-reload
 sudo -n systemctl restart "${ojdkSliceName}"
 # cgroup
-sudo -n systemd-run --slice "${ojdkSliceName}" --scope java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+PrintFlagsFinal -version 2>&1 | tee java-cgroup-options.log || :
 sudo -n systemd-run --slice "${ojdkSliceName}" --scope java -XX:+PrintFlagsFinal -version 2>&1 | tee java-cgroup-no-options.log || :
 # non-cgroup
-sudo -n java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+PrintFlagsFinal -version 2>&1 | tee java-direct-options.log || :
 sudo -n java -XX:+PrintFlagsFinal -version 2>&1 | tee java-direct-no-options.log || :
 
-checkMaxHeapSize java-cgroup-options.log 1 || exit 1
 checkMaxHeapSize java-cgroup-no-options.log 1 || exit 1
-checkMaxHeapSize java-direct-options.log 0 || exit 1
 checkMaxHeapSize java-direct-no-options.log 0 || exit 1
